Feat:Adiciona o Spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 spring.mail.from=pedropeixotovz@gmail.com
 
+#Configuracao JWT
+app.jwt.secret=${SECRET_KEY}
+app.jwt.expiration-ms=3600000
