Feat:Adiciona a verificacao por token , entre outras coisas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,10 @@ spring.mail.from=pedropeixotovz@gmail.com
 #Configuracao JWT
 app.jwt.secret=${SECRET_KEY}
 app.jwt.expiration-ms=3600000
+app.jwt.issuer=Peixotim
+
+#Logs de Debug
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.io.jsonwebtoken=INFO
