--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,6 @@ app.jwt.issuer=Peixotim
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.io.jsonwebtoken=INFO
+
+springdoc.api-docs.path=/api-docs
+
