fix:Corrige e refatora dados para melhor execucao da aplicacao

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.mail.host=${MAIL_HOST}
 spring.mail.protocol=${MAIL_PROTOCOL}
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
-spring.mail.from=pedropeixotovz@gmail.com
+spring.mail.from=pedroghost74@gmail.com
 
 #Configuracao JWT
 app.jwt.secret=${SECRET_KEY}
